--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <img src="images/logo-batida.png" alt="Batida do Coração" class="logo" />
+  <img src="{{ site.baseurl }}/images/logo-batida.png" alt="Batida do Coração" class="logo" />
   <h2>Batida</h2>
   <h4>do Coração</h3>
 </header>
